<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.textfield.TextInputLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Start Date -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutStartDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="From">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startDateFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- End Date -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEndDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="To">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endDateFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Min People -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCapacity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Minimum People">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/capacityFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</com.google.android.material.textfield.TextInputLayout>